--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 <head>
     <meta charset="utf-8">
     <title>Project 1 - Restaurant API- Alicia Garcia</title>
+    <style type="text/css">
+        .restaurantDiv {
+            width: 400px;
+            height: 200px;
+            margin: 10px;
+        }
+    </style>
 </head>
 
 <body>
@@ -26,6 +33,7 @@
         //variable for restaurants; make an array [" "]
         var restaurants = [" "];
 
+        //function re-renders the html to display the appropriate content
         function displayResInfo() {
             var food = $(this).attr("data-food");
 
@@ -51,6 +59,8 @@
                     console.log(results);
                     //creating a div for restaurant info.
                     var restaurantDiv = $("<div>");
+                    restaurantDiv.addClass("restaurantDiv");
+
 
                     //loops through all results for title
                     var title = results[i].title;
@@ -89,14 +99,19 @@
             });
 
         }
-
+        //on click associated with the search button on html
         $("#add-food").on("click", function (event) {
+            //prevent page from reloading on click
             event.preventDefault();
+            //grabs text user put in  
             var food = $("#food-input").val().trim();
+            //pushes value to restaurant array  
             restaurants.push(food);
-        });
 
+        });
+        //click event listener to all elements with the id "add-food"
         $(document).on("click", "#add-food", displayResInfo);
+
 
     </script>
 </body>
