--- a/index.html
+++ b/index.html
@@ -1,12 +1,266 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+		/>
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+		<link
+			rel="stylesheet"
+			href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+			integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+			crossorigin="anonymous"
+		/>
+		<script
+			src="https://code.jquery.com/jquery-3.1.1.min.js"
+			integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+			crossorigin="anonymous"
+		></script>
+
+		<link rel="stylesheet" href="style.css" />
+		<title>Project #1</title>
+	</head>
+	<body>
+		<div class="jumbotron">
+			<h1 class="display-1">Date Night</h1>
+		</div>
+		<div class="container">
+			<div class="container-1">
+				<div
+					id="foodslideshow1"
+					class="carousel slide carousel-fade"
+					data-ride="carousel"
+				>
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<img
+								src="images/taco.JPG"
+								class="d-block w-100"
+								alt="Taco"
+							/>
+						</div>
+						<div class="carousel-item">
+							<img
+								src="images/catfish_meal.jpg"
+								class="d-block w-100"
+								alt="catfish meal"
+							/>
+						</div>
+
+						<div class="carousel-item">
+							<a
+								class="carousel-control-prev"
+								href="#carouselExampleFade"
+								role="button"
+								data-slide="prev"
+							>
+								<span
+									class="carousel-control-prev-icon"
+									aria-hidden="true"
+								></span>
+								<span class="sr-only">Previous</span>
+							</a>
+							<a
+								class="carousel-control-next"
+								href="#carouselExampleFade"
+								role="button"
+								data-slide="next"
+							>
+								<span
+									class="carousel-control-next-icon"
+									aria-hidden="true"
+								></span>
+								<span class="sr-only">Next</span>
+							</a>
+							<img
+								src="images/chicken_nuggets.png"
+								class="d-block w-100"
+								alt="chicken nuggets"
+							/>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="container-2">
+				<div
+					id="foodslideshow1"
+					class="carousel slide carousel-fade"
+					data-ride="carousel"
+				>
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<img
+								src="images/taco.JPG"
+								class="d-block w-100"
+								alt="cheeseburger meal"
+							/>
+						</div>
+						<div class="carousel-item">
+							<img
+								src="images/catfish_meal.jpg"
+								class="d-block w-100"
+								alt="catfish meal"
+							/>
+						</div>
+						<div class="carousel-item">
+							<img
+								src="images/chicken_nuggets.png"
+								class="d-block w-100"
+								alt="chicken nuggets"
+							/>
+						</div>
+					</div>
+					<a
+						class="carousel-control-prev"
+						href="#carouselExampleFade"
+						role="button"
+						data-slide="prev"
+					>
+						<span
+							class="carousel-control-prev-icon"
+							aria-hidden="true"
+						></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a
+						class="carousel-control-next"
+						href="#carouselExampleFade"
+						role="button"
+						data-slide="next"
+					>
+						<span
+							class="carousel-control-next-icon"
+							aria-hidden="true"
+						></span>
+						<span class="sr-only">Next</span>
+					</a>
+				</div>
+			</div>
+
+			<div class="wrapper">
+				<div class="container-3">
+					<input
+						type="text"
+						class="input"
+						placeholder="search for local food"
+					/>
+					<input
+						type="button"
+						value="Search"
+						class="close=btn"
+					/>
+				</div>
+			</div>
+
+			<form>
+				<div class="form-group">
+					<input
+						type="file"
+						class="form-control-file"
+						id="exampleFormControlFile1"
+					/>
+				</div>
+			</form>
+
+			<div class="container-4">
+				<table class="table table-hover">
+					<thead>
+						<tr>
+							<th scope="col">#</th>
+							<th scope="col">Type</th>
+							<th scope="col">Resturant</th>
+							<th scope="col">Distance</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<th scope="row">1</th>
+							<td>Tacos</td>
+							<td>TacoBell</td>
+							<td>5 miles</td>
+						</tr>
+						<tr>
+							<th scope="row">2</th>
+							<td>Waffles</td>
+							<td>Waffle House</td>
+							<td>.6 miles</td>
+						</tr>
+						<tr>
+							<th scope="row">3</th>
+							<td>Pizza</td>
+							<td>Tase of chicago</td>
+							<td>1 mile</td>
+						</tr>
+						<tr>
+							<th scope="row">4</th>
+							<td>Hamburgers</td>
+							<td>In-N-Out</td>
+							<td>4 miles</td>
+						</tr>
+						<tr>
+							<th scope="row">5</th>
+							<td>Chicken</td>
+							<td>Chick Fila</td>
+							<td>3 miles</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+
+			<div class="container-5">
+				<table class="table table-hover">
+					<thead>
+						<tr>
+							<th scope="col">#</th>
+							<th scope="col">Name</th>
+							<th scope="col">Type</th>
+							<th scope="col">Rating</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<th scope="row">1</th>
+							<td>Avengers:EG</td>
+							<td>PG-13</td>
+							<td>Sci-fi</td>
+						</tr>
+						<tr>
+							<th scope="row">2</th>
+							<td>Thor:Ragnarok</td>
+							<td>PG-13</td>
+							<td>Sci-fi</td>
+						</tr>
+						<tr>
+							<th scope="row">3</th>
+							<td>Deadpool</td>
+							<td>R</td>
+							<td>Sci-fi</td>
+						</tr>
+						<tr>
+							<th scope="row">4</th>
+							<td>Captain Marvel</td>
+							<td>PG-13</td>
+							<td>Sci-fi</td>
+						</tr>
+						<tr>
+							<th scope="row">5</th>
+							<td>Avengers: Infinity War</td>
+							<td>PG-13</td>
+							<td>Sci-fi</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+
+			<div class="footer">
+				<p>
+					&copy; Copyright 2019 SMU Bootcamp. All rights reserved
+				</p>
+			</div>
+		</div>
+	</body>
 </html>
