linked our logic files to the html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 			content="width=device-width, initial-scale=1.0"
 		/>
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
+        <script src="logic1.js"></script>
+        <script src="logic2.js"></script>
 		<link
 			rel="stylesheet"
 			href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
