added ID's and added java

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <script src="logic1.js"></script>
         <script src="logic2.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<link
 			rel="stylesheet"
 			href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -147,12 +148,14 @@
 					<input
 						type="text"
 						class="input"
-						placeholder="search for local food"
+                        placeholder="search for local food"
+                        id="movieInput"
 					/>
 					<input
 						type="button"
 						value="Search"
-						class="close=btn"
+                        class="close=btn"
+                        id="findMovie"
 					/>
 				</div>
 			</div>
