--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<script src="logic1.js"></script>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="logic2.js"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
-	<script src="https://code.jquery.com/jquery-3.1.1.min.js"
-		integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+	
 
     <link rel="stylesheet" href="style.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 	<title>Project #1</title>
 </head>
 
@@ -47,7 +46,6 @@
 			</div>
 		</div>
 
-<<<<<<< HEAD
 		<div class="container-2">
 			<div id="foodslideshow1" class="carousel slide carousel-fade" data-ride="carousel">
 				<div class="carousel-inner">
@@ -60,22 +58,6 @@
 					<div class="carousel-item">
 						<img src="images/chicken_nuggets.png" class="d-block w-100" alt="chicken nuggets" />
 					</div>
-=======
-			<div class="wrapper">
-				<div class="container-3">
-					<input
-						type="text"
-						class="input"
-                        placeholder="search for local food"
-                        id="movieInput"
-					/>
-					<input
-						type="button"
-						value="Search"
-                        class="close=btn"
-                        id="findMovie"
-					/>
->>>>>>> master
 				</div>
 				<a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
 					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -90,8 +72,8 @@
 
 		<div class="wrapper">
 			<div class="container-3">
-				<input type="text" class="input" placeholder="search for local food" />
-				<input type="button" value="Search" class="close=btn" />
+				<input type="text" id="movieInput" class="input" placeholder="search for local food" />
+				<input type="button" value="Search" id="findMovie" class="close=btn" />
 			</div>
 		</div>
 
@@ -107,6 +89,5 @@
 				</p>
 			</div>
         </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	</body>
 </html>
