added to the html

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 		<div class="wrapper">
 			<div class="container-3">
-				<input type="text" id="movieInput" class="input" placeholder="search for local food" />
+				<input type="text" id="movieInput" class="input" placeholder="search for movies" />
 				<input type="button" value="Search" id="findMovie" class="close=btn" />
 			</div>
 		</div>
