--- a/index.html
+++ b/index.html
@@ -171,9 +171,10 @@
 					<thead>
 						<tr>
 							<th scope="col">#</th>
-							<th scope="col">Type</th>
-							<th scope="col">Resturant</th>
-							<th scope="col">Distance</th>
+							<th scope="col">Name</th>
+							<th scope="col">Address</th>
+							<th scope="col">Link</th>
+							<th scope="col">Phone Number</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -216,7 +217,7 @@
 					<thead>
 						<tr>
 							<th scope="col">#</th>
-							<th scope="col">Name</th>
+							<th scope="col">Title</th>
 							<th scope="col">Type</th>
 							<th scope="col">Rating</th>
 						</tr>
