--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
 			</div>
 		</div>
 
-<<<<<<< HEAD
 			<form>
 				<div class="form-group">
 					<input
@@ -78,6 +77,14 @@
 						class="form-control-file"
 						id="exampleFormControlFile1"
 					/>
+				</div>
+			</form>
+			<form>
+				<div class="wrapper">
+					<div class="container-3">
+						<input type="text" id="movieInput" class="input" placeholder="search for movies" />
+						<input type="button" value="Search" id="findMovie" class="close=btn" />
+					</div>
 				</div>
 			</form>
 
@@ -125,16 +132,9 @@
 						</tr>
 					</tbody>
 				</table>
-=======
-		<div class="wrapper">
-			<div class="container-3">
-				<input type="text" id="movieInput" class="input" placeholder="search for movies" />
-				<input type="button" value="Search" id="findMovie" class="close=btn" />
->>>>>>> master
 			</div>
 		</div>
 
-<<<<<<< HEAD
 			<div class="container-5">
 				<table class="table table-hover">
 					<thead>
@@ -178,11 +178,6 @@
 						</tr>
 					</tbody>
 				</table>
-=======
-		<form>
-			<div class="form-group">
-				<input type="file" class="form-control-file" id="exampleFormControlFile1" />
->>>>>>> master
 			</div>
 		</form>
 
