added to the html

--- a/index.html
+++ b/index.html
@@ -70,15 +70,14 @@
 			</div>
 		</div>
 
-			<form>
-				<div class="form-group">
-					<input
-						type="file"
-						class="form-control-file"
-						id="exampleFormControlFile1"
-					/>
+		<form>
+			<div class="wrapper">
+				<div class="container-3">
+					<input type="text"  class="input" placeholder="search for food" />
+					<input type="button" value="Search"  class="close=btn" />
 				</div>
-			</form>
+			</div>
+		</form>
 			<form>
 				<div class="wrapper">
 					<div class="container-3">
