--- a/index.html
+++ b/index.html
@@ -7,134 +7,79 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="logic1.js"></script>
 	<script src="logic2.js"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
-	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
 
-    <link rel="stylesheet" href="style.css" />
+
+	<link rel="stylesheet" href="style.css" />
 
 	<title>Project #1</title>
 </head>
 
 <body>
-	<div class="jumbotron">
-		<h1 class="display-1">Date Night</h1>
-	</div>
 	<div class="container">
-		<div class="container-1">
-			<div id="foodslideshow1" class="carousel slide carousel-fade" data-ride="carousel">
-				<div class="carousel-inner">
-					<div class="carousel-item active">
-						<img src="images/taco.JPG" class="d-block w-100" alt="Taco" />
-					</div>
-					<div class="carousel-item">
-						<img src="images/catfish_meal.jpg" class="d-block w-100" alt="catfish meal" />
-					</div>
 
-					<div class="carousel-item">
-						<a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-							<span class="sr-only">Previous</span>
-						</a>
-						<a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-							<span class="carousel-control-next-icon" aria-hidden="true"></span>
-							<span class="sr-only">Next</span>
-						</a>
-						<img src="images/chicken_nuggets.png" class="d-block w-100" alt="chicken nuggets" />
-					</div>
-				</div>
-			</div>
+		<div class="jumbotron">
+			<h1 class="display-1">Date Night</h1>
 		</div>
 
-		<div class="container-2">
-			<div id="foodslideshow1" class="carousel slide carousel-fade" data-ride="carousel">
-				<div class="carousel-inner">
-					<div class="carousel-item active">
-						<img src="images/taco.JPG" class="d-block w-100" alt="cheeseburger meal" />
-					</div>
-					<div class="carousel-item">
-						<img src="images/catfish_meal.jpg" class="d-block w-100" alt="catfish meal" />
-					</div>
-					<div class="carousel-item">
-						<img src="images/chicken_nuggets.png" class="d-block w-100" alt="chicken nuggets" />
-					</div>
-				</div>
-				<a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="sr-only">Previous</span>
-				</a>
-				<a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="sr-only">Next</span>
-				</a>
+		<div class="row">
+
+			<!-- <div class="container-3"> -->
+			<div class="col-3"></div>
+
+			<div class="col-3">
+				<input type="text" class="input" placeholder="search for food" id="food-input" />
+				<input type="button" value="Search" class="close=btn" id="add-food" />
 			</div>
+
+			<!-- </div>
+									</div> -->
+			<!-- </form>
+								<form> -->
+			<!-- <div class="wrapper">
+										<div class="container-3"> -->
+			<div class="col-3">
+				<input type="text" id="movieInput" class="input" placeholder="search for movies" />
+				<input type="button" value="Search" id="findMovie" class="close=btn" />
+			</div>
+			<div class="col-3"></div>
+
 		</div>
 
-		<form>
-			<div class="wrapper">
-				<div class="container-4">
-					<input type="text"  class="input" placeholder="search for food" />
-					<input type="button" value="Search"  class="close=btn" />
-				</div>
-			</div>
-		</form>
-			<form>
-				<div class="wrapper">
-					<div class="container-3">
-						<input type="text" id="movieInput" class="input" placeholder="search for movies" />
-						<input type="button" value="Search" id="findMovie" class="close=btn" />
+
+		<!-- <div class="container-1"> -->
+		<div class="row">
+			<div class="col-4">
+				<div id="foodslideshow1" class="carousel slide carousel-fade" data-ride="carousel">
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<img src="images/taco.JPG" class="d-block w-100" alt="Taco" />
+						</div>
+						<div class="carousel-item">
+							<img src="images/catfish_meal.jpg" class="d-block w-100" alt="catfish meal" />
+						</div>
+
+						<div class="carousel-item">
+							<a class="carousel-control-prev" href="#carouselExampleFade" role="button"
+								data-slide="prev">
+								<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+								<span class="sr-only">Previous</span>
+							</a>
+							<a class="carousel-control-next" href="#carouselExampleFade" role="button"
+								data-slide="next">
+								<span class="carousel-control-next-icon" aria-hidden="true"></span>
+								<span class="sr-only">Next</span>
+							</a>
+							<img src="images/chicken_nuggets.png" class="d-block w-100" alt="chicken nuggets" />
+						</div>
 					</div>
 				</div>
-			</form>
-
-			<div class="container-4">
-				<table class="table table-hover">
-					<thead>
-						<tr>
-							<th scope="col">#</th>
-							<th scope="col">Name</th>
-							<th scope="col">Address</th>
-							<th scope="col">Link</th>
-							<th scope="col">Phone Number</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<th scope="row">1</th>
-							<td>Tacos</td>
-							<td>TacoBell</td>
-							<td>5 miles</td>
-						</tr>
-						<tr>
-							<th scope="row">2</th>
-							<td>Waffles</td>
-							<td>Waffle House</td>
-							<td>.6 miles</td>
-						</tr>
-						<tr>
-							<th scope="row">3</th>
-							<td>Pizza</td>
-							<td>Tase of chicago</td>
-							<td>1 mile</td>
-						</tr>
-						<tr>
-							<th scope="row">4</th>
-							<td>Hamburgers</td>
-							<td>In-N-Out</td>
-							<td>4 miles</td>
-						</tr>
-						<tr>
-							<th scope="row">5</th>
-							<td>Chicken</td>
-							<td>Chick Fila</td>
-							<td>3 miles</td>
-						</tr>
-					</tbody>
-				</table>
 			</div>
-		</div>
-
-			<div class="container-5">
+			<!-- </div> -->
+			<div class="col-4">
 				<table class="table table-hover">
 					<thead>
 						<tr>
@@ -178,13 +123,119 @@
 					</tbody>
 				</table>
 			</div>
-		</form>
 
-			<div class="footer">
-				<p>
-					&copy; Copyright 2019 SMU Bootcamp. All rights reserved
-				</p>
+			<!-- <div class="container-2"> -->
+			<div class="col-4">
+				<div id="foodslideshow2" class="carousel slide carousel-fade" data-ride="carousel">
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<img src="images/taco.JPG" class="d-block w-100" alt="cheeseburger meal" />
+						</div>
+						<div class="carousel-item">
+							<img src="images/catfish_meal.jpg" class="d-block w-100" alt="catfish meal" />
+						</div>
+						<div class="carousel-item">
+							<img src="images/chicken_nuggets.png" class="d-block w-100" alt="chicken nuggets" />
+						</div>
+					</div>
+				</div>
+
+
+
+				<a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="sr-only">Next</span>
+				</a>
 			</div>
-        </div>
-	</body>
+		</div>
+		<!-- </div> -->
+		<!-- </div> -->
+
+		<!-- <form> -->
+		<!-- </div> -->
+		<!-- </form> -->
+
+		<!-- <div class="container-4"> -->
+		<!-- <table class="table table-hover">
+			<thead>
+				<tr>
+					<th scope="col">#</th>
+					<th scope="col">Name</th>
+					<th scope="col">Address</th>
+					<th scope="col">Link</th>
+					<th scope="col">Phone Number</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<th scope="row">1</th>
+					<td>Tacos</td>
+					<td>TacoBell</td>
+					<td>5 miles</td>
+				</tr>
+				<tr>
+					<th scope="row">2</th>
+					<td>Waffles</td>
+					<td>Waffle House</td>
+					<td>.6 miles</td>
+				</tr>
+				<tr>
+					<th scope="row">3</th>
+					<td>Pizza</td>
+					<td>Tase of chicago</td>
+					<td>1 mile</td>
+				</tr>
+				<tr>
+					<th scope="row">4</th>
+					<td>Hamburgers</td>
+					<td>In-N-Out</td>
+					<td>4 miles</td>
+				</tr>
+				<tr>
+					<th scope="row">5</th>
+					<td>Chicken</td>
+					<td>Chick Fila</td>
+					<td>3 miles</td>
+				</tr>
+			</tbody>
+		</table> -->
+		<!-- </div>
+	</div> -->
+
+		<!-- <div class="container-5"> -->
+		<!-- </form> -->
+		<!-- This row will handle all of the retrieved restaurants -->
+		<div class="row">
+			<div class="col-sm-12">
+				<br>
+
+				<!-- This card will initially be made up of a card and wells for each of the restaruants retrieved -->
+				<div class="card">
+
+					<!-- card Heading for the retrieved restaurants box -->
+					<div class="card-header">
+						<strong>
+							<i class="fa fa-table"></i> Restaurants</strong>
+					</div>
+
+					<!-- This main card will hold each of the resulting articles -->
+					<div class="card-body" id="restaurant-section">
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	</div>
+	<div class="footer">
+		<p>
+			&copy; Copyright 2019 SMU Bootcamp. All rights reserved
+		</p>
+	</div>
+	<!-- </div> -->
+</body>
+
 </html>
