added to my java

--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
 					<tbody>
 						<tr>
 							<th scope="row">1</th>
-							<td>Avengers:EG</td>
-							<td>PG-13</td>
-							<td>Sci-fi</td>
+							<td id="title">Avengers:EG</td>
+							<td id="rating">PG-13</td>
+							<td id="summary">Sci-fi</td>
 						</tr>
 						<tr>
 							<th scope="row">2</th>
