took my response and pushed it to the table

--- a/index.html
+++ b/index.html
@@ -82,18 +82,16 @@
 				<table class="table table-hover">
 					<thead>
 						<tr>
-							<th scope="col">#</th>
-							<th scope="col">Title</th>
-							<th scope="col">Type</th>
+							<th scope="col">Actors</th>
 							<th scope="col">Rating</th>
+							<th scope="col">Director</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
-							<th scope="row">1</th>
-							<td id="title">Avengers:EG</td>
-							<td id="rating">PG-13</td>
-							<td id="summary">Sci-fi</td>
+							<td id="actors"></td>
+							<td id="rated"></td>
+							<td id="director"></td>
 						</tr>
 						
 						
